--- a/_assets/css/__modules/_header.scss
+++ b/_assets/css/__modules/_header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
   min-width: $second-width;
-  min-height: 500px;
+  min-height: 750px;
   
   overflow: hidden;
   background-color: #000;
@@ -15,10 +15,12 @@
 }
 
 .header {
+  box-sizing: border-box;
   height: 100vh;
-  min-height: 500px;
+  min-height: 750px;
   min-width: $second-width;
   margin-top: -107px;
+  padding: 0 30px;
   
   display: -webkit-flex;
   display: -moz-flex;
@@ -35,38 +37,9 @@
     &-studios {
       background-image: url(../img/_studios/studios_head.jpg)
     }
-  }
-  
-  &__wrapper {
-    box-sizing: border-box;
-    width: 100%;
-    padding-left: 50%;
-    max-width: $main-width;
-    
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-  &__title {
-    flex-grow: 1;
-    height: 62px;
-    @include raleway(62px, 300, 62px);
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    margin-bottom: 25px;
-    color: #fff;
-    &--is-medium {
-      font-weight: 500;
+    &-about {
+      background-image: url(../img/_about/about_head.jpg)
     }
   }
   
-  &__text {
-    @include raleway(16px, 400, 28px);
-    color: rgba(#fff, 0.4);
-  }
 }
