--- a/_assets/css/__modules/__settings.scss
+++ b/_assets/css/__modules/__settings.scss
@@ -90,6 +90,7 @@
 $primary-color: #e56b36;
 $text-white: rgba(255, 255, 255, 1);
 $gray-text: #818181;
+$light-gray: #f3f3f3;
 
 $main-width: 1360px;
 $second-width: 960px;
