--- a/_assets/css/__modules/_caption.scss
+++ b/_assets/css/__modules/_caption.scss
@@ -15,6 +15,11 @@
     width: 3840px;
   }
   
+  &__wrapper {
+    min-width: $second-width;
+    padding: 0 30px;
+  }
+  
   &__divider {
     flex-grow: 1000;
     height: 1px;
