--- a/_assets/css/style.scss
+++ b/_assets/css/style.scss
@@ -23,3 +23,6 @@ html, body {
 @import '__modules/studios';
 @import '__modules/squares';
 @import '__modules/team';
+@import '__modules/menu-vert';
+
+@import '__modules/l-container';
