--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -368,8 +368,16 @@ html, body {
   .caption--is-inside {
     width: 3840px; }
   .caption__wrapper {
-    min-width: 960px;
-    padding: 0 30px; }
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px; }
+    .caption__wrapper .caption__title {
+      margin-bottom: 0; }
   .caption__divider {
     flex-grow: 1000;
     height: 1px;
@@ -658,6 +666,11 @@ html, body {
         background-image: url('data:image/svg+xml;utf-8,<svg enable-background="new 0 0 24 24" viewBox="0 0 24 24" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg"><path d="m13.313 8.319v1.665h2.516l-.328 2.608h-2.188v6.691h-2.625v-6.691h-2.194v-2.608h2.194v-1.923c0-2.232 1.329-3.447 3.269-3.447.929 0 1.728.071 1.96.103v2.332l-1.345.001c-1.055 0-1.259.514-1.259 1.269z" fill="#fff"/><path d="m17 24h-10c-3.86 0-7-3.141-7-7v-10c0-3.86 3.14-7 7-7h10c3.859 0 7 3.14 7 7v10c0 3.859-3.141 7-7 7zm-10-22c-2.757 0-5 2.243-5 5v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5v-10c0-2.757-2.243-5-5-5z" fill="#fff"/></svg>'); }
 
 .c-article {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
   overflow-x: hidden;
   min-width: 960px; }
   .c-article--is-yoga {
@@ -667,10 +680,16 @@ html, body {
     background-repeat: no-repeat; }
 
 .article {
-  box-sizing: border-box;
-  max-width: 1360px;
-  margin: 0 auto;
-  padding-left: 343px; }
+  width: 100%;
+  box-sizing: border-box; }
+  .article--is-right {
+    max-width: 1040px;
+    min-width: 640px;
+    padding: 115px 175px 66px 190px;
+    padding-left: 190px; }
+    @media screen and (max-width: 1359px) {
+      .article--is-right {
+        padding: 115px 95px 66px; } }
   .article__wrapper {
     background-color: #fff;
     padding: 115px 166px 66px; }
@@ -698,6 +717,23 @@ html, body {
     line-height: 28px;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 20px; }
+  .article__list {
+    list-style-type: none;
+    counter-reset: num; }
+  .article__item {
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
+    margin-left: 35px; }
+    .article__item:before {
+      content: counter(num) ". ";
+      counter-increment: num;
+      font-weight: 500;
+      position: absolute;
+      margin-left: -35px; }
 
 .shedule {
   display: -webkit-flex;
@@ -1047,24 +1083,26 @@ html, body {
   min-width: 960px;
   max-width: 1600px;
   margin: 0 auto;
-  overflow: hidden;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap; }
+  overflow: hidden; }
   .team__wrapper {
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    width: 4412px; }
+    width: 2401px;
+    position: relative;
+    left: 0;
+    -wbkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    transition: left 0.5s ease-in-out; }
   .team__item {
     margin: 0 6px;
-    font-size: 0; }
+    font-size: 0;
+    background-color: #383838; }
   .team__photo {
     vertical-align: top; }
   .team__controls {
@@ -1111,5 +1149,52 @@ html, body {
       background-image: url(../img/arrow_left.svg); }
     .team__arrow--is-right {
       background-image: url(../img/arrow_right.svg); }
+
+.menu-vert {
+  background-color: #e6ebee;
+  width: 320px; }
+
+.l-container {
+  min-width: 960px;
+  width: 100%;
+  overflow-x: hidden;
+  background-color: #000;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: center; }
+  .l-container__row {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    width: 100%;
+    max-width: 1600px;
+    min-width: 960px; }
+  .l-container__column {
+    box-sizing: border-box;
+    max-width: 1600px;
+    width: 100%;
+    flex-grow: 1;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex; }
+    .l-container__column--is-left {
+      justify-content: flex-end;
+      flex-shrink: 0;
+      width: 350px;
+      padding-left: 30px;
+      background-color: #e6ebee; }
+    .l-container__column--is-right {
+      justify-content: flex-start;
+      flex-shrink: 1;
+      width: 1070px;
+      padding-right: 30px;
+      background-color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
