--- a/_assets/css/__modules/_article.scss
+++ b/_assets/css/__modules/_article.scss
@@ -180,3 +180,28 @@
     }
   }
 }
+
+.spotify {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  
+  list-style-type: none;
+  &__item {
+    display: block;
+    background-color: #d2d2d2;
+    margin-right: 12px;
+    width: 204px;
+    height: 204px;
+    box-shadow: 0 35px 20px -36px rgba(#000, 0.8);
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+    margin-bottom: 13px;
+    
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 49px 30px -50px rgba(#000, 0.5);
+    }
+  }
+}
