--- a/_assets/css/__modules/_slider.scss
+++ b/_assets/css/__modules/_slider.scss
@@ -49,6 +49,9 @@
       &-third {
         background-image: url(../img/_header/slide_bg_3.jpg);
       }
+      &-fourth {
+        background-image: url(../img/_header/slide_bg_4.jpg);
+      }
     }
   }
 }
