заменил картинку в about

--- a/_assets/css/__modules/_header.scss
+++ b/_assets/css/__modules/_header.scss
@@ -38,7 +38,7 @@
       background-image: url(../img/_studios/studios_head.jpg);
     }
     &-about {
-      background-image: url(../img/_about/about_head.jpg);
+      background-image: url(../img/_about/about_head-2.jpg);
     }
     &-team {
       background-image: url(../img/_team/team_head.jpg);
